--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,7 @@ organizations/ordererOrganizations/*
 organizations/peerOrganizations/*
 system-genesis-block/*
 *.tar.gz
+# Fabric CA private keys (NEVER commit)
+**/fabric-ca/**/keystore/*
+**/fabric-ca/**/msp/keystore/*
 log.txt
